Se crean los servicios y controladores de Usuarios,Sedes y Proveedores, ademas se inicia la creacion del servicio de inicio de sesion.

--- a/VentaDeAccesoriosAPI/appsettings.json
+++ b/VentaDeAccesoriosAPI/appsettings.json
@@ -5,8 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DbConnection": "Server=localhost;Database=DBExamen;Trusted_Connection=True;TrustServerCertificate=True"
-    }
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Server=localhost;Database=DBExamen;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+
+  "JwtConfiguration": {
+    "Key": "*¡clave_jwt_!*ProyectoFinal*"
+  }
 }
