Se arganizan errores en controladores y servicios con respecto a ids y solicitudes

--- a/VentaDeAccesoriosAPI/appsettings.json
+++ b/VentaDeAccesoriosAPI/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=localhost;Database=DBExamen;Trusted_Connection=True;TrustServerCertificate=True"
+    "DbConnection": "Server=DESKTOP-FE32V8O\\SQLEXPRESS;Database=AccesoriosDB;Trusted_Connection=True;TrustServerCertificate=True"
   },
 
   "JwtConfiguration": {
-    "Key": "*¡clave_jwt_!*ProyectoFinal*"
+    "Key": "EsteEsUnSecretoMuySeguroDeMasDe32Caracteres!"
   }
 }
