Se suben roles, uso de token para validar contraseñas

--- a/VentaDeAccesoriosAPI/appsettings.json
+++ b/VentaDeAccesoriosAPI/appsettings.json
@@ -5,8 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DbConnection": "Server=localhost;Database=DBExamen;Trusted_Connection=True;TrustServerCertificate=True"
-    }
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Server=DESKTOP-A3FHGUN\\SQLEXPRESS;Database=AccesoriosDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "JwtConfiguration": {
+    "Key": "ClaveSuperSecretaParaJWT123456789", // Se pueden generar llaves 
+    "Salt": "SalSeguraParaHashDeContrasena2025"
+  }
 }
