Se organizan metodos de insertar y actualizar detalles de ventas

--- a/VentaDeAccesoriosAPI/appsettings.json
+++ b/VentaDeAccesoriosAPI/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "DbConnection": "Server=DESKTOP-A3FHGUN\\SQLEXPRESS;Database=AccesoriosDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DbConnection": "Server=DESKTOP-FE32V8O\\SQLEXPRESS;Database=AccesoriosDB;Trusted_Connection=True;TrustServerCertificate=True"
 
   },
   "JwtConfiguration": {
