Gestión de relación N:N Productos con Proveedores funciona correctamente. ProductosProveedorService.

--- a/VentaDeAccesoriosAPI/appsettings.json
+++ b/VentaDeAccesoriosAPI/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
+    "ConnectionStrings": {
 
-    "DbConnection": "Server=DESKTOP-A3FHGUN\\SQLEXPRESS;Database=AccesoriosDB;Trusted_Connection=True;TrustServerCertificate=True"
+        "DbConnection": "Server=localhost;Database=AccesoriosDB;Trusted_Connection=True;TrustServerCertificate=True"
 
-  },
+    },
   "JwtConfiguration": {
 
     "Key": "ClaveSuperSecretaParaJWT123456789", // Se pueden generar llaves 
