--- a/VentaDeAccesoriosAPI/appsettings.json
+++ b/VentaDeAccesoriosAPI/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
+    "ConnectionStrings": {
 
-    "DbConnection": "Server=DESKTOP-A3FHGUN\\SQLEXPRESS;Database=AccesoriosDB;Trusted_Connection=True;TrustServerCertificate=True"
+        "DbConnection": "Server=db20973.databaseasp.net; Database=db20973; User Id=db20973; Password=g+4QL8n-p%7D; Encrypt=False; MultipleActiveResultSets=True;"
 
-  },
+    },
   "JwtConfiguration": {
 
     "Key": "ClaveSuperSecretaParaJWT123456789", // Se pueden generar llaves 
